<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.AppCompat.NoActionBar">

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_empresa2"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/customedittext"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/DarkBlue"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="24dp">


                <TextView
                    android:id="@+id/SignInText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Registrar Usuario"
                    android:textColor="@android:color/white"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nombretxt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/customedittext"
                    android:drawableLeft="@drawable/baseline_person_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/nombre"
                    android:padding="8dp"
                    android:textColor="@android:color/white"
                    android:textColorHighlight="@android:color/black"
                    android:textColorHint="@color/bonne" />

                <EditText
                    android:id="@+id/apellidotxt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/customedittext"
                    android:drawableLeft="@drawable/baseline_person_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/apellido"
                    android:padding="8dp"
                    android:textColor="@android:color/white"
                    android:textColorHighlight="@android:color/black"
                    android:textColorHint="@color/bonne" />
                <EditText
                    android:id="@+id/numeroID"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/customedittext"
                    android:drawableLeft="@drawable/baseline_edit_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/numero_identificacion"
                    android:padding="8dp"
                    android:textColor="@android:color/white"
                    android:textColorHighlight="@android:color/black"
                    android:textColorHint="@color/bonne" />

                <EditText
                    android:id="@+id/correotxt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/customedittext"
                    android:drawableLeft="@drawable/baseline_email_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/correo"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:textColor="@android:color/white"
                    android:textColorHighlight="@android:color/black"
                    android:textColorHint="@color/bonne" />

                <EditText
                    android:id="@+id/passwordtxt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/customedittext"
                    android:drawableLeft="@drawable/baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@android:color/white"
                    android:textColorHighlight="@android:color/black"
                    android:textColorHint="@color/bonne" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/SubirImagen"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="5dp"
                        android:backgroundTint="@color/DarkLightBlue"
                        android:text="Subir Imagen"
                        android:textColor="@color/bonne"
                        android:textSize="18sp"
                        app:cornerRadius="20dp" />

                    <ImageView
                        android:id="@+id/ivImagen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitCenter"/>

                </LinearLayout>


                <Button
                    android:id="@+id/SignInButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/bonne"
                    android:text="Registrar"
                    android:textColor="@color/DarkBlue"
                    android:textSize="18sp"
                    app:cornerRadius="20dp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>